
- Changed the respawn time of Ruby Lilac.

- Added Vordrassil's Seed to the loot table of Redfang Hunter for the quest Vordrassil's Seeds.
- Added Vordrassil's Seed to the loot table of Frostpaw Warrior for the quest Vordrassil's Seeds.
- Changed flags of Vordrassil's Seed to allow every member of a group to loot it.

- Changed the respawn time of Flying Machine Engine.

[2022-01-15]
- Added Banana Bunch to the loot table of Mangal Crocolisk for the quest Some Make Lemonade, Some Make Liquor.
- Added Banana Bunch to the loot table of Emperor Cobra for the quest Some Make Lemonade, Some Make Liquor.
- Added Papaya to the loot table of Mangal Crocolisk for the quest Some Make Lemonade, Some Make Liquor.
- Added Papaya to the loot table of Emperor Cobra for the quest Some Make Lemonade, Some Make Liquor.
- Added Orange to the loot table of Mangal Crocolisk for the quest Some Make Lemonade, Some Make Liquor.
- Added Orange to the loot table of Emperor Cobra for the quest Some Make Lemonade, Some Make Liquor.
- Changed flags of Banana Bunch to allow every member of a group to loot it.
- Changed flags of Papaya to allow every member of a group to loot it.
- Changed flags of Orange to allow every member of a group to loot it.

- Changed the respawn time of Dusty Journal.

[2022-02-20]
- Changed the respawn time of Warped Crates.

[2022-02-21]
- Added Blackhoof Armaments to the loot table of Grimtotem Breaker for the quests Arms of the Grimtotems and More than Coincidence.
- Added Blackhoof Armaments to the loot table of Grimtotem Spirit-Shifter for the quests Arms of the Grimtotems and More than Coincidence.
- Added Blackhoof Armaments to the loot table of Grimtotem Elder for the quests Arms of the Grimtotems and More than Coincidence.
- Changed flags of Blackhoof Armaments to allow every member of a group to loot it.
- Changed flags of Grimtotem Note to allow every member of a group to loot it.